Agregada la página de servicios

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Zapatillas Jordan</title>
 </head>
 <body>
     
-<h1>Mi trabajo final</h1>
-<img src="https://i.ebayimg.com/images/g/HhUAAOSwwjhf0WH7/s-l400.jpg" alt="">
+<h1>Jordan</h1>
+<img src="https://i.ebayimg.com/images/g/HhUAAOSwwjhf0WH7/s-l900.jpg" alt="">
 
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat quos aperiam saepe quod quisquam. Veniam, recusandae incidunt neque, quos perferendis dolores cum eaque consequatur aut nulla nisi, obcaecati optio fugiat..
 
